BusOne/src/objects/Product__c.object
<CustomObject>
    <description>This object is used to store the Product and its objective related details.It is the child of the Event standard object.</description>
    <fields>
        <fullName>Event_ID__c</fullName>
        <description>Used to store the Event ID</description>
        <label>Event ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective1__c</fullName>
        <description>Used to store the first objective.</description>
        <label>Objective1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Call-General</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>Pull Through</fullName>
                </value>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnership Discussion</fullName>
                </value>
                <value>
                    <fullName>Benchmarks/Economics</fullName>
                </value>
                <value>
                    <fullName>PT/DUR/MAC</fullName>
                </value>
                <value>
                    <fullName>PT/DUR/MAC - Non - MS</fullName>
                </value>
                <value>
                    <fullName>Account Readiness/Launch Prepardness</fullName>
                </value>
                <value>
                    <fullName>Disease Education(Could be specific to disease states if you want)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objective2__c</fullName>
        <description>Used to store the second objective.</description>
        <label>Objective2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Call-General</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>Pull Through</fullName>
                </value>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnership Discussion</fullName>
                </value>
                <value>
                    <fullName>Benchmarks/Economics</fullName>
                </value>
                <value>
                    <fullName>PT/DUR/MAC</fullName>
                </value>
                <value>
                    <fullName>PT/DUR/MAC - Non - MS</fullName>
                </value>
                <value>
                    <fullName>Account Readiness/Launch Prepardness</fullName>
                </value>
                <value>
                    <fullName>Disease Education(Could be specific to disease states if you want)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objective3__c</fullName>
        <description>Used to store the thrid objective.</description>
        <label>Objective3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Call-General</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>Pull Through</fullName>
                </value>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnership Discussion</fullName>
                </value>
                <value>
                    <fullName>Benchmarks/Economics</fullName>
                </value>
                <value>
                    <fullName>PT/DUR/MAC</fullName>
                </value>
                <value>
                    <fullName>PT/DUR/MAC - Non - MS</fullName>
                </value>
                <value>
                    <fullName>Account Readiness/Launch Prepardness</fullName>
                </value>
                <value>
                    <fullName>Disease Education(Could be specific to disease states if you want)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Used to store the name of the product</description>
        <label>Company(s)/Product(s)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Myrbetriq</fullName>
                </value>
                <value>
                    <fullName>Xtandi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>